@@ -1,0 +1,4 @@
+procedure Elab4_Proc is
+begin
+   null;
+end;
