@@ -1,0 +1,4 @@
+-- { dg-excess-errors "no code generated" }
+
+generic
+procedure Elab4_Proc;
